Initialize service worker that will register/unregister content scripts

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,17 +11,17 @@
     <div class="grid">
         <div class="input-container">
             <label> Skip (skippable) Ads </label>
-            <input type="checkbox" id="skip-ad">
+            <input type="checkbox" id="skip_ad">
         </div>
 
         <div class="input-container">
             <label class="container"> Mute Ads </label>
-            <input type="checkbox" id="mute-ad">
+            <input type="checkbox" id="mute_ad">
         </div>
 
         <div class="input-container">
             <label class="container"> Block Auto Pause </label>
-            <input type="checkbox" id="block-pause">
+            <input type="checkbox" id="block_pause">
         </div>
     </div>
     <script src="./popup.js"></script>
