Correct spelling of YouTube

--- a/public/popup.html
+++ b/public/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h2>Options</h2>
-    <p>The selected options will automatically run for each running youtube video</p>
+    <p>The selected options will automatically run for each running YouTube video</p>
     <div class="grid">
         <div class="input-container">
             <label> Skip (skippable) Ads </label>
