Adjust wording for html files

--- a/public/installed.html
+++ b/public/installed.html
@@ -19,6 +19,6 @@
         <img src="enable.png" alt="enable Always Allow on youtube.com">
       </ol>
     </ol>
-    <p>If you are having any issues, please email me at dylanau99@gmail.com</p>
+    <p>If you are having any issues, please leave a review <a href="https://addons.mozilla.org/en-US/firefox/addon/youtube-no-disturbance/" target="_blank" rel="noopener noreferrer">here</a> or email me at dylanau99@gmail.com</p>
   </body>
 </html>
