--- a/public/options.html
+++ b/public/options.html
@@ -48,7 +48,7 @@
       <div class="flex margin-bottom">
         <button id="apply-changes">Apply changes</button>
         <button id="revert-changes">Revert changes</button>
-        <button id="open-subscription-form">Add your YouTube subscriptions to changes</button>
+        <button id="open-subscription-form">Import your YouTube subscriptions</button>
       </div>
 
       <div id="editor">
